<resources>
    <string name="app_name">TerceiroTrabalho</string>
    <!-- Main (Login e Cadastro) -->
    <string name="DigitarEmail">Digite seu e-mail</string>
    <string name="DigitarSenha">Digite sua senha</string>
    <string name="DigitarNome">Digite seu nome</string>
    <string name="EntrarButton">ENTRAR</string>
    <string name="NãoPossuiConta">Não possui conta?</string>
    <string name="CadastreSe">Cadastre-se</string>
    <string name="Cadastrar">CADASTRAR</string>
    <string name="Voltar">VOLTAR</string>
    <string name="FazerLogin">Faça seu login</string>
    <string name="FazerCadastro">Faça seu cadastro</string>
    <string name="PreenchaTodosOsCampos">Preencha todos os campos</string>
    <string name="EscolhaUmTipo">Escolha um tipo</string>
    <!-- Main (Login e Cadastro) -->

    <!--> CreateHomework -->
    <string name="CriarAtividade">Crie uma atividade</string>
    <string name="EditarAtividade">Edite uma atividade</string>
    <string name="NomeAtividade">Digite o nome da atividade</string>
    <string name="DescricaoAtividade">Digite a descrição da atividade</string>
    <string name="PrazoAtividade">
        Informe o prazo dentro do qual a atividade deve ser cumprida
    </string>
    <string name="UsuarioAtividade">Informe para quem é esta atividade</string>
    <string name="RelacionarUsuario">Relacione um usuário a esta atividade</string>
    <string name="CriarAtividadeButton">CRIAR</string>
    <string name="ExcluirAtividadeButton">EXCLUIR</string>
    <string name="EditarAtividadeButton">EDITAR</string>
    <string name="ConcluirAtividadeButton">CONCLUIR</string>
    <!--> CreateHomework -->

    <!--> SendRequest -->
    <string name="DigitarEmailUser">Digite o e-mail do usuário</string>
    <string name="DescricaoInicial">Envie uma solicitação para um usuário</string>
    <string name="EnviarButton">ENVIAR</string>

    <!-- Home -->
    <string name="AtividadesDisponiveis">Atividades Disponíveis</string>
    <string name="AtividadesConcluidas">Atividades Concluídas</string>
    <string name="PerfilUsuario">Informações Usuário</string>

</resources>