<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/createHomework"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CreateHomeworkActivity">

    <Spinner
        android:id="@+id/menuSpinnerCreateHomework"
        android:layout_width="409dp"
        android:layout_height="32dp"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="3dp" />


    <EditText
        android:id="@+id/homeworkNameEditValue"
        android:layout_width="338dp"
        android:layout_height="48dp"
        android:layout_marginTop="88dp"
        android:hint="@string/NomeAtividade"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.465"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menuSpinnerCreateHomework" />

    <EditText
        android:id="@+id/homeworkDescriptionEditValue"
        android:layout_width="338dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:hint="@string/DescricaoAtividade"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.447"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeworkNameEditValue" />

    <Button
        android:id="@+id/buttonSetTime"
        android:layout_width="170dp"
        android:layout_height="47dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="24dp"
        android:onClick="showTimePickerDialog"
        android:text="DEFINIR HORÁRIO"
        app:layout_constraintEnd_toStartOf="@+id/buttonSetdate"
        app:layout_constraintHorizontal_bias="0.761"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <Button
        android:id="@+id/buttonSetdate"
        android:layout_width="170dp"
        android:layout_height="0dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="24dp"
        android:onClick="showDatePickerDialog"
        android:text="DEFINIR DATA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="314dp"
        android:layout_height="41dp"
        android:layout_marginTop="8dp"
        android:text="@string/CriarAtividade"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menuSpinnerCreateHomework" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="312dp"
        android:layout_height="21dp"
        android:layout_marginTop="28dp"
        android:text="@string/UsuarioAtividade"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.383"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeworkDescriptionEditValue" />

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="168dp"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:text="@string/Voltar"
        android:onClick="backToHome"
        app:layout_constraintEnd_toStartOf="@+id/button1"
        app:layout_constraintHorizontal_bias="0.29"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSetTime" />

    <Button
        android:id="@+id/button1"
        android:layout_width="168dp"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        android:onClick="registerHomework"
        android:text="@string/CriarAtividadeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSetdate" />

    <ListView
        android:id="@+id/homeworksListView"
        android:layout_width="408dp"
        android:layout_height="275dp"
        android:layout_marginTop="172dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintVertical_bias="1.0"
        android:scrollbars="vertical"/>

    <TextView
        android:id="@+id/textViewErrorSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:text="@string/PreenchaTodosOsCampos"
        android:textColor="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        android:visibility="gone" />

    <TextView
        android:id="@+id/textViewErrorFields"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/RelacionarUsuario"
        android:textColor="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.218"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeworkDescriptionEditValue"
        android:visibility="gone" />

    <EditText
        android:id="@+id/userEmailCreateHomeworkValue"
        android:layout_width="338dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/DigitarEmailUser"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />
</androidx.constraintlayout.widget.ConstraintLayout>