
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/homeworkNameHome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"
            />

        <TextView
            android:id="@+id/homeworkDescriptionHome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:textSize="18sp"
            />

        <TextView
            android:id="@+id/homeworkDateHome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:textSize="18sp"
            />

        <TextView
            android:id="@+id/homeworkTimeHome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:textSize="18sp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonDeleteHomework"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/ExcluirAtividadeButton" />

        <Button
            android:id="@+id/buttonEditHomework"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/EditarAtividadeButton" />

        <Button
            android:id="@+id/buttonMarkHomeworkAsDone"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/ConcluirAtividadeButton" />

    </LinearLayout>

</LinearLayout>